Closed
Bug 320324
Opened 20 years ago
Closed 20 years ago
Static modules released too late, assertions in GenerateJavaInterfaces.exe
Categories
(Core :: XPCOM, defect, P2)
Core
XPCOM
Tracking
()
RESOLVED
FIXED
People
(Reporter: benjamin, Assigned: benjamin)
References
Details
Attachments
(1 file)
|
1.89 KB,
patch
|
darin.moz
:
review+
|
Details | Diff | Splinter Review |
Running GenerateJavaInterfaces in a xulrunner build after bug 316414 landed asserts during shutdown now, due to the fact that static modules are being released too late. Patch forthcoming.
| Assignee | ||
Comment 1•20 years ago
|
||
Attachment #205919 -
Flags: review?(darin)
| Assignee | ||
Updated•20 years ago
|
Priority: -- → P2
Updated•20 years ago
|
Attachment #205919 -
Flags: review?(darin) → review+
| Assignee | ||
Comment 2•20 years ago
|
||
Fixed on trunk.
Status: NEW → RESOLVED
Closed: 20 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•