Bug 320324 - Static modules released too late, assertions in GenerateJavaInterfaces, r=darin